--- a/index.html
+++ b/index.html
@@ -62,10 +62,13 @@
       <nav>
         <div class="navbar">
           <div class="navbar-navigation">
-            <!-- <a href="index.html"><img src="images/raincitylogo2.svg"></a> -->
+            <a class="navbar-transition" href="index.html"
+              ><img src="images/RC_Logo.svg"
+            /></a>
+            <!--
             <a class="navbar-transition" href="/"
               ><span id="blue">RAIN </span> CITY</a
-            >
+            >-->
           </div>
           <div class="navbar-menu">
             <div class="cl-effect-5">
