Added work page & animated SVG elements

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <a class="navbar-transition" href="services.html"
                   ><span data-hover="SERVICES">SERVICES</span></a
                 >
-                <a class="navbar-transition" href="services.html"
+                <a class="navbar-transition" href="work.html"
                   ><span data-hover="WORK">WORK</span></a
                 >
                 <a class="navbar-transition" href="about.html"
