Finished work site

--- a/images/Rain City Websites.html
+++ b/images/Rain City Websites.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<!-- saved from url=(0031)http://127.0.0.1:3000/work.html -->
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><script type="text/javascript" src="./Rain City Websites_files/___vscode_livepreview_injected_script"></script>
+    
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="canonical" href="" />
+    <link rel="canonical" href="http://127.0.0.1:3000/work.html">
 
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
+    <meta name="description" content="">
+    <meta name="keywords" content="">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="/css/root.css" type="text/css" />
-    <link rel="stylesheet" href="/css/work.css" />
+    <link rel="stylesheet" href="./Rain City Websites_files/root.css" type="text/css">
+    <link rel="stylesheet" href="./Rain City Websites_files/work.css">
     <!-- JS -->
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="./Rain City Websites_files/main.js"></script>
 
     <script>
       /* Open */
@@ -51,7 +51,7 @@
   </head>
   <body>
     <!--  <div class="transition transition-3 is-active"></div> -->
-    <div class="navbar-overlay-animation is-active"></div>
+    <div class="navbar-overlay-animation"></div>
     <!-- ============================================ -->
     <!--                   NAVIGATION                 -->
     <!-- ============================================ -->
@@ -61,9 +61,7 @@
       <nav>
         <div class="navbar">
           <div class="navbar-navigation">
-            <a class="navbar-transition" href="index.html"
-              ><img src="images/RC_Logo.svg"
-            /></a>
+            <a class="" href="http://127.0.0.1:3000/index.html"><img src="./Rain City Websites_files/RC_Logo.svg"></a>
             <!--
             <a class="navbar-transition" href="/"
               ><span id="blue">RAIN </span> CITY</a
@@ -72,27 +70,17 @@
           <div class="navbar-menu">
             <div class="cl-effect-5">
               <nav class="cl-effect-5">
-                <a class="navbar-transition" href="services.html"
-                  ><span data-hover="SERVICES">SERVICES</span></a
-                >
-                <a class="navbar-transition" href="work.html"
-                  ><span data-hover="WORK">WORK</span></a
-                >
-                <a class="navbar-transition" href="about.html"
-                  ><span data-hover="ABOUT">ABOUT</span></a
-                >
-                <a class="navbar-transition" href="blog.html"
-                  ><span data-hover="INSIGHTS">INSIGHTS</span></a
-                >
-                <a class="navbar-transition" id="contact" href="contact.html"
-                  >CONTACT</a
-                >
+                <a class="" href="http://127.0.0.1:3000/services.html"><span data-hover="SERVICES">SERVICES</span></a>
+                <a class="" href="http://127.0.0.1:3000/work.html"><span data-hover="WORK">WORK</span></a>
+                <a class="" href="http://127.0.0.1:3000/about.html"><span data-hover="ABOUT">ABOUT</span></a>
+                <a class="" href="http://127.0.0.1:3000/blog.html"><span data-hover="INSIGHTS">INSIGHTS</span></a>
+                <a class="" id="contact" href="http://127.0.0.1:3000/contact.html">CONTACT</a>
               </nav>
             </div>
           </div>
           <div class="navbar-menu-mobile" onclick="openNav()">
             <a class="link">NAVIGATION</a>
-            <a><img src="images/menu.svg" /></a>
+            <a><img src="./Rain City Websites_files/menu.svg"></a>
           </div>
         </div>
       </nav>
@@ -104,20 +92,20 @@
       <div class="overlay-content">
         <div class="overlay-nav">
           <div class="navbar-overlay">
-            <a href="index.html"><span id="blue">RAIN </span> CITY</a>
+            <a href="http://127.0.0.1:3000/index.html"><span id="blue">RAIN </span> CITY</a>
           </div>
-          <span class="closebtn" onclick="closeNav()">&times;</span>
+          <span class="closebtn" onclick="closeNav()">×</span>
         </div>
         <div class="overlay-links">
-          <h1><a id="link1" class="link" href="services.html">SERVICES</a></h1>
-          <h1><a id="link2" class="link" href="about.html">WORK</a></h1>
-          <h1><a id="link3" class="link" href="about.html">ABOUT</a></h1>
-          <h1><a id="link4" class="link" href="blog.html">INSIGHTS</a></h1>
-          <h1><a id="link5" class="link" href="contact.html">CONTACT</a></h1>
+          <h1><a id="link1" class="link" href="http://127.0.0.1:3000/services.html">SERVICES</a></h1>
+          <h1><a id="link2" class="link" href="http://127.0.0.1:3000/about.html">WORK</a></h1>
+          <h1><a id="link3" class="link" href="http://127.0.0.1:3000/about.html">ABOUT</a></h1>
+          <h1><a id="link4" class="link" href="http://127.0.0.1:3000/blog.html">INSIGHTS</a></h1>
+          <h1><a id="link5" class="link" href="http://127.0.0.1:3000/contact.html">CONTACT</a></h1>
           <h1>
-            <a id="link6" class="link-email" href="contact.html">
+            <a id="link6" class="link-email" href="http://127.0.0.1:3000/contact.html">
               RAINCITYWEBSITES.COM
-              <img src="/images/icons8-circled-right-100.png" />
+              <img src="./Rain City Websites_files/icons8-circled-right-100.png">
             </a>
           </h1>
         </div>
@@ -132,28 +120,28 @@
       <div class="container">
         <div class="left-section">
           <div class="hero-animation">
-            <div class="hero-header hero-transition">EXAMPLES OF</div>
+            <div class="hero-header">EXAMPLES OF</div>
           </div>
           <div class="hero-animation">
-            <div class="hero-header hero-transition">WHAT WE HAVE</div>
+            <div class="hero-header">WHAT WE HAVE</div>
           </div>
           <div class="hero-animation">
-            <div class="hero-header hero-transition">ACCOMPLISHED</div>
+            <div class="hero-header">ACCOMPLISHED</div>
           </div>
-          <br />
+          <br>
           <div class="hero-animation">
-            <p class="hero-p hero-transition">
+            <p class="hero-p">
               Scaling your business through a data driven approach is what we
             </p>
           </div>
           <div class="hero-animation">
-            <p class="hero-p hero-transition">
+            <p class="hero-p">
               specialize in. Explore our different services below to see if we’d
               be a
             </p>
           </div>
           <div class="hero-animation">
-            <p class="hero-p hero-transition">great fit for your company.</p>
+            <p class="hero-p">great fit for your company.</p>
           </div>
         </div>
         <div class="left-section-mobile">
@@ -167,14 +155,7 @@
           </p>
         </div>
         <div class="right-section">
-          <img
-            class="light"
-            decoding="async"
-            src="/images/Coach_Isometric_Animated.svg"
-            alt=""
-            aria-hidden="true"
-            width="105%"
-          />
+          <img class="light" decoding="async" src="./Rain City Websites_files/Coach_Isometric_Animated.svg" alt="" aria-hidden="true" width="105%">
         </div>
       </div>
     </section>
@@ -182,11 +163,11 @@
     <!-- ============================================ -->
     <!--                   PORTFOLIO                   -->
     <!-- ============================================ -->
-    <div class="navbar-overlay-animation2 is-active"></div>
+    <div class="navbar-overlay-animation2"></div>
     <div id="section-title">
       <div class="container">
-        <div class="left-section">Our Projects</div>
-        <div class="right-section">WORK</div>
+        <div class="left-section">What We Do</div>
+        <div class="right-section">SERVICES</div>
       </div>
     </div>
 
@@ -197,61 +178,47 @@
             <div class="title">FILTER BY</div>
             <div class="link">
               <div class="cl-effect-5-body">
-                <a href="services.html">
+                <a href="http://127.0.0.1:3000/services.html">
                   <span data-hover="WEB DEVELOPMENT">WEB DEVELOPMENT</span>
                 </a>
               </div>
             </div>
             <div class="link">
               <div class="cl-effect-5-body">
-                <a href="services.html">
+                <a href="http://127.0.0.1:3000/services.html">
                   <span data-hover="E-COMMERCE">E-COMMERCE</span>
                 </a>
               </div>
             </div>
             <div class="link">
               <div class="cl-effect-5-body">
-                <a href="services.html">
+                <a href="http://127.0.0.1:3000/services.html">
                   <span data-hover="WEB DESIGN">WEB DESIGN</span>
                 </a>
               </div>
             </div>
             <div class="link">
               <div class="cl-effect-5-body">
-                <a href="services.html">
+                <a href="http://127.0.0.1:3000/services.html">
                   <span data-hover="SHOW ALL">SHOW ALL</span>
                 </a>
               </div>
             </div>
             <div class="contact">
+              QUESTIONS?
               <div class="cl-effect-5-body">
-                <a href="services.html"
-                  ><span data-hover="CONTACT US">CONTACT US</span></a
-                >
-                <img src="/images/icons8-circled-right-100.png" />
+                <a href="http://127.0.0.1:3000/services.html"><span data-hover="CONTACT US">CONTACT US</span></a>
+                <img src="./Rain City Websites_files/icons8-circled-right-100.png">
               </div>
             </div>
           </div>
         </div>
         <div class="right-section">
-          <a href="services.html" class="portfolio-link" id="mouse-link">
+          <a href="http://127.0.0.1:3000/services.html" class="portfolio-link" id="mouse-link">
             <div class="hover-container">
-              <img
-                class="light"
-                decoding="async"
-                src="/images/cakecannabis.png"
-                alt=""
-                aria-hidden="true"
-                width="100%"
-              />
+              <img class="light" decoding="async" src="./Rain City Websites_files/cakecannabis.png" alt="" aria-hidden="true" width="100%">
               <div class="overlay-hover">
-                <img
-                  class="light"
-                  decoding="async"
-                  src="/images/portfolio2.webp"
-                  alt=""
-                  aria-hidden="true"
-                />
+                <img class="light" decoding="async" src="./Rain City Websites_files/portfolio1.webp" alt="" aria-hidden="true">
               </div>
             </div>
             <div class="title">CAKE CANNABIS</div>
@@ -260,24 +227,11 @@
               <span>WEBFLOW DEVELOPMENT</span>
             </div>
           </a>
-          <a href="services.html" class="portfolio-link" id="mouse-link">
+          <a href="http://127.0.0.1:3000/services.html" class="portfolio-link" id="mouse-link">
             <div class="hover-container">
-              <img
-                class="light"
-                decoding="async"
-                src="/images/liquidlove.jpg"
-                alt=""
-                aria-hidden="true"
-                width="100%"
-              />
+              <img class="light" decoding="async" src="./Rain City Websites_files/liquidlove.jpg" alt="" aria-hidden="true" width="100%">
               <div class="overlay-hover">
-                <img
-                  class="light"
-                  decoding="async"
-                  src="/images/portfolio2.webp"
-                  alt=""
-                  aria-hidden="true"
-                />
+                <img class="light" decoding="async" src="./Rain City Websites_files/portfolio2.webp" alt="" aria-hidden="true">
               </div>
             </div>
             <div class="title">LIQUID LOVE</div>
@@ -286,24 +240,11 @@
               <span>WEBSITE DEVELOPMENT</span>
             </div>
           </a>
-          <a href="services.html" class="portfolio-link" id="mouse-link">
+          <a href="http://127.0.0.1:3000/services.html" class="portfolio-link" id="mouse-link">
             <div class="hover-container">
-              <img
-                class="light"
-                decoding="async"
-                src="/images/bistroClementine.jpg"
-                alt=""
-                aria-hidden="true"
-                width="100%"
-              />
+              <img class="light" decoding="async" src="./Rain City Websites_files/bistroClementine.jpg" alt="" aria-hidden="true" width="100%">
               <div class="overlay-hover">
-                <img
-                  class="light"
-                  decoding="async"
-                  src="/images/portfolio2.webp"
-                  alt=""
-                  aria-hidden="true"
-                />
+                <img class="light" decoding="async" src="./Rain City Websites_files/portfolio3.webp" alt="" aria-hidden="true">
               </div>
             </div>
             <div class="title">BISTRO CLEMENTINE</div>
@@ -342,13 +283,11 @@
           <div class="footer-email-mobile">RAINCITYWEBSITES@GMAIL.COM</div>
 
           <div class="cl-effect-5-footer">
-            <a href="services.html"
-              ><span data-hover="SERVICES">SERVICES</span></a
-            >
-            <a href="services.html"><span data-hover="WORK">WORK</span></a>
-            <a href="about.html"><span data-hover="ABOUT">ABOUT</span></a>
-            <a href="blog.html"><span data-hover="INSIGHTS">INSIGHTS</span></a>
-            <a href="blog.html"><span data-hover="CONTACT">CONTACT</span></a>
+            <a href="http://127.0.0.1:3000/services.html"><span data-hover="SERVICES">SERVICES</span></a>
+            <a href="http://127.0.0.1:3000/services.html"><span data-hover="WORK">WORK</span></a>
+            <a href="http://127.0.0.1:3000/about.html"><span data-hover="ABOUT">ABOUT</span></a>
+            <a href="http://127.0.0.1:3000/blog.html"><span data-hover="INSIGHTS">INSIGHTS</span></a>
+            <a href="http://127.0.0.1:3000/blog.html"><span data-hover="CONTACT">CONTACT</span></a>
           </div>
 
           <div class="header">RAINCITYWEBSITES@GMAIL.COM</div>
@@ -356,12 +295,7 @@
         <div class="right-section">
           <div class="email-form">
             <label>Subscribe to the Rain City Newsletter!</label>
-            <input
-              type="email"
-              id="email"
-              name="email"
-              placeholder="Email Address"
-            />
+            <input type="email" id="email" name="email" placeholder="Email Address">
           </div>
           <p>
             Rain City Websites is proud to serve the local Seattle community and
@@ -399,16 +333,16 @@
       <div class="container">
         <div class="socials-left">RAIN CITY LLC</div>
         <div class="socials-middle">
-          <a href="about.html"><img src="images/reddit.svg" /></a>
-          <a href="about.html"><img src="images/linkedin.svg" /></a>
-          <a href="about.html"><img src="images/Twitter.svg" /></a>
-          <a href="about.html"><img src="images/instagram.svg" /></a>
-          <a href="about.html"><img src="images/facebook.svg" /></a>
+          <a href="http://127.0.0.1:3000/about.html"><img src="./Rain City Websites_files/reddit.svg"></a>
+          <a href="http://127.0.0.1:3000/about.html"><img src="./Rain City Websites_files/linkedin.svg"></a>
+          <a href="http://127.0.0.1:3000/about.html"><img src="./Rain City Websites_files/Twitter.svg"></a>
+          <a href="http://127.0.0.1:3000/about.html"><img src="./Rain City Websites_files/instagram.svg"></a>
+          <a href="http://127.0.0.1:3000/about.html"><img src="./Rain City Websites_files/facebook.svg"></a>
         </div>
         <div class="socials-right">
-          <a href="about.html">TERMS</a>
-          <a href="about.html">PRIVACY</a>
-          <a href="about.html">COOKIES</a>
+          <a href="http://127.0.0.1:3000/about.html">TERMS</a>
+          <a href="http://127.0.0.1:3000/about.html">PRIVACY</a>
+          <a href="http://127.0.0.1:3000/about.html">COOKIES</a>
         </div>
       </div>
     </div>
@@ -429,5 +363,6 @@
         });
       }
     </script>
-  </body>
-</html>
+  
+
+</body></html>
