--- a/services.html
+++ b/services.html
@@ -64,6 +64,10 @@
             <a class="navbar-transition" href="index.html"
               ><img src="images/RC_Logo.svg"
             /></a>
+            <!--
+            <a class="navbar-transition" href="/"
+              ><span id="blue">RAIN </span> CITY</a
+            >-->
           </div>
           <div class="navbar-menu">
             <div class="cl-effect-5">
@@ -71,7 +75,7 @@
                 <a class="navbar-transition" href="services.html"
                   ><span data-hover="SERVICES">SERVICES</span></a
                 >
-                <a class="navbar-transition" href="blog.html"
+                <a class="navbar-transition" href="work.html"
                   ><span data-hover="WORK">WORK</span></a
                 >
                 <a class="navbar-transition" href="about.html"
@@ -93,6 +97,8 @@
         </div>
       </nav>
     </header>
+
+    <div class="cursor" id="cursor"></div>
 
     <div id="myNav" class="overlay">
       <div class="overlay-content">
