Flushed out blog pages with headers & images

--- a/index.html
+++ b/index.html
@@ -522,12 +522,12 @@
           </div>
         </a>
         <a
-          href="insights/optimizing-images-for-the-web.html"
+          href="insights/why-every-business-needs-a-website.html"
           class="blog-element"
           id="mouse-link"
         >
           <div class="blog-date">Insight</div>
-          <div class="blog-header">Optimizing Images for the Web</div>
+          <div class="blog-header">Why Every Business needs a Website</div>
           <div class="blog-link">
             <div class="blog-link-text">READ MORE</div>
             <img src="/images/noun-arrow.svg" />
